fix(ui): align items start in <PokeGrid />

--- a/react-components/src/components/PokeList/PokeList.module.scss
+++ b/react-components/src/components/PokeList/PokeList.module.scss
@@ -9,8 +9,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(16.5rem, 1fr));
-  justify-items: center;
-  justify-content: space-around;
+  justify-items: start;
   gap: 2rem;
   > * {
     max-width: 20rem;
